--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+div#root {
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
